Improve Dark Mode for borders of PHUIBoxView and Setup issues
Summary:
Do not hardcode the border of some boxes to `#e2e2e2` which is unnecessarily bright in Dark Mode but set the `{$lightgreyborder}` variable instead which corresponds to `#C7CCD9` in Default Mode - close enough.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to http://phorge.localhost/settings/panel/apitokens/ and look at the box
* Go to http://phorge.localhost/config/issue/ and open one of the listed issues
* Scroll down on one of the listed issues and check the "To continue, resolve this problem and reload the page." box

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: amybones, tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26232

--- a/webroot/rsrc/css/application/config/setup-issue.css
+++ b/webroot/rsrc/css/application/config/setup-issue.css
@@ -24,26 +24,26 @@
 .setup-issue table {
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #e2e2e2;
+  border: 1px solid {$lightgreyborder};
 }
 
 .setup-issue table th {
   text-align: right;
   width: 30%;
   background: {$lightbluebackground};
-  border: 1px solid #e2e2e2;
+  border: 1px solid {$lightgreyborder};
   padding: 8px;
 }
 
 .setup-issue table td {
-  border: 1px solid #e2e2e2;
+  border: 1px solid {$lightgreyborder};
   padding: 8px;
   word-break: break-word;
 }
 
 .setup-issue pre {
   width: auto;
-  border: 1px solid #e2e2e2;
+  border: 1px solid {$lightgreyborder};
   padding: 12px;
   background: {$lightbluebackground};
   overflow-x: auto;
@@ -77,7 +77,7 @@
   font-size: 15px;
   font-weight: bold;
   color: {$bluetext};
-  border-bottom: 1px solid #e2e2e2;
+  border-bottom: 1px solid {$lightgreyborder};
   overflow: hidden;
   padding: 16px;
   line-height: 24px;
@@ -110,11 +110,11 @@
 
 .setup-issue-next {
   padding: 12px;
-  border: 1px solid #BFCFDA;
-  background: #daeaf3;
+  border: 1px solid {$lightblueborder};
+  background: {$lightblue};
   text-align: center;
   margin: 12px 0;
-  color: #2980b9;
+  color: {$blacktext};
   border-radius: 3px;
 }
 
