--- a/webroot/rsrc/css/phui/phui-box.css
+++ b/webroot/rsrc/css/phui/phui-box.css
@@ -123,7 +123,7 @@ body .phui-box-blue-property .phui-header-shell + .phui-object-box {
 /* Config Boxes */
 
 .phui-box-white-config.phui-box-border {
-  border-color: #e2e2e2;
+  border-color: {$lightgreyborder};
   border-radius: 3px;
 }
 
@@ -132,7 +132,7 @@ body .phui-box-blue-property .phui-header-shell + .phui-object-box {
 }
 
 .phui-box-white-config .phui-header-shell {
-  border-bottom: 1px solid #e2e2e2;
+  border-bottom: 1px solid {$lightgreyborder};
   overflow: hidden;
   padding: 0 16px 16px;
 }
